Fixed card details responsive styling on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ html, body {
   opacity: 0.5;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 900px) {
   .active-giveaways {
     width: 80%;
     margin: auto;
@@ -65,5 +65,13 @@ html, body {
 
   .content {
     font-size: 16px;
+  }
+
+  .App {
+    overflow: scroll;
+  }
+
+  .full-img {
+      object-fit: contain;
   }
 }
